--- a/library.properties
+++ b/library.properties
@@ -1,10 +1,10 @@
 name=UcnBrushlessDCMotorPWM
-version=1.0
+version=1.1
 license=MIT
 author=usefullcode.net
 maintainer=usefullcode.net <usefullcode@gmail.com>
 sentence=Brushless DC motor(BLDC) drive like as servo motor
-paragraph=Support Arduino UNO(ATMEGA328P), ESP32, ESP8266. Support motor driver is MOS-FET sitch, DRV8313, L298N and so on.
+paragraph=Support Arduino UNO(ATMEGA328P), STM32, ESP32, ESP8266. Support motor driver is MOS-FET sitch, DRV8313, L298N and so on.
 category=Device Control
 url=https://github.com/usefullcodenet/UcnBrushlessDCMotorPWM/
 repository=https://github.com/usefullcodenet/UcnBrushlessDCMotorPWM.git
